# freelance_portal_back

./: .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  base.py  core.py  database.py  docker-compose.local.yml  docker-compose.yml  main.py  pyproject.toml  sql_app.db
app/: main.py
app/core/: config.py  exceptions.py
app/internal/: chats.py  files.py
app/internal/users/: users.py
app/models/: __init__.py  base.py  core.py  general.py
app/routes/: account.py  bids.py  exceptions.py  files.py  orders.py  reviews.py
app/routes/chat/: chat_associations.py  chats.py  messages.py  web_socket.py
app/schemas/: bids.py  chats.py  core.py  files.py  order.py  review.py  users.py
app/utils/: bids.py  database_connection.py  factory.py  json_serialization.py  log_config.py  orders.py  review.py  sof_delite.py  utils.py
migrations/: env.py
migrations/versions/: 1a0b73ef20ec_ordera.py  1cf418b7bc8b_bid.py  340b88c972b7_kategorii_statusi_init.py  3d19dc76a7c4_edit_orders.py  416d3acf91de_add_messages.py  48fb16459c98_fix_migration_holazsx.py  67f152aab1e3_add_chat.py  6987bb2955ed_skills.py  6a76974c6872_orders.py  7712444e3b3f_merge_holazsx.py  7a5de1721879_edit_orders.py  9a1f4ea60bed_init.py  9a4fc5eeb8cd_init_migration.py  9a7a5de9c8c1_ordera.py  a17e68d41c90_init_migration.py  a1c6579a1af8_bid.py  ada036a4ea2d_.py  bfca37b8bfaa_add_associations_id.py  dfa455c2bdec_add_initial_roles.py  dfa4992d87b1_add_orders.py  e4deb457cf45_last.py  eaf15c1d81b1_edit_orders.py  f956e052e249_files.py  fb1bbc41159b_add_initial_roles.py
(+1 files in other folders)
